
[package]
name = "psl"
version = "0.1.0"
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
phper = { version = "0.5.1" }
